--- a/yumshare-client/package.json
+++ b/yumshare-client/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@ngrx/effects": "^19.2.1",
+    "@ngrx/store": "^19.2.1",
+    "ngx-owl-carousel-o": "^19.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "@ngrx/store": "^19.2.1"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.15",
