--- a/yumshare-core/package.json
+++ b/yumshare-core/package.json
@@ -43,6 +43,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.5",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
