--- a/yumshare-client/package.json
+++ b/yumshare-client/package.json
@@ -22,13 +22,13 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
-
     "@ngrx/effects": "^19.2.1",
     "@ngrx/store": "^19.2.1",
     "firebase": "^11.10.0",
     "ngx-owl-carousel-o": "^19.0.2",
     "ngx-socket-io": "^4.8.4",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
