--- a/yumshare-client/package.json
+++ b/yumshare-client/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^19.2.0",
     "@ngrx/effects": "^19.2.1",
     "@ngrx/store": "^19.2.1",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "firebase": "^11.10.0",
     "ngx-owl-carousel-o": "^19.0.2",
     "ngx-socket-io": "^4.8.4",
