pull code translater

--- a/yumshare-core/Dockerfile
+++ b/yumshare-core/Dockerfile
@@ -1,14 +1,21 @@
 # Use Node.js 18 Alpine
 FROM node:18-alpine
 
-# Set working directory
+# Install dumb-init for proper signal handling
+RUN apk add --no-cache dumb-init
+
+# Create app directory
 WORKDIR /app
+
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nestjs -u 1001
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install ALL dependencies (including devDependencies for build)
+RUN npm ci && npm cache clean --force
 
 # Copy source code
 COPY . .
@@ -16,8 +23,18 @@ COPY . .
 # Build the application
 RUN npm run build
 
+# Remove devDependencies after build
+RUN npm prune --production
+
+# Change ownership to non-root user
+RUN chown -R nestjs:nodejs /app
+USER nestjs
+
 # Expose port
 EXPOSE 3000
+
+# Use dumb-init to handle signals properly
+ENTRYPOINT ["dumb-init", "--"]
 
 # Start the application
 CMD ["npm", "run", "start:prod"]
